gcc/testsuite/gcc.dg/20060218-1.c
/* { dg-do compile } */

void
foo (void)
{
  register int cc __asm ("cc"); /* { dg-error "invalid register name" } */
  __asm ("" : : "r" (cc) : "cc");
}
